--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@heroicons/react": "^1.0.6",
     "next": "12.1.5",
     "react": "18.1.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "18.1.0",
+    "react-outside-click-handler": "^1.3.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/node": "17.0.30",
     "@types/react": "18.0.8",
+    "@types/react-datepicker": "^4.4.1",
     "@types/react-dom": "18.0.3",
+    "@types/react-outside-click-handler": "^1.3.1",
     "autoprefixer": "^10.4.5",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
