--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "next": "12.1.5",
+    "node-sass": "^7.0.1",
     "react": "18.1.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "18.1.0",
