--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "date-fns": "^2.28.0",
     "next": "12.1.5",
     "node-sass": "^7.0.1",
     "react": "18.1.0",
