--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@badrap/bar-of-progress": "^0.1.2",
     "@heroicons/react": "^1.0.6",
     "date-fns": "^2.28.0",
+    "geolib": "^3.3.3",
     "next": "12.1.5",
     "node-sass": "^7.0.1",
     "react": "18.1.0",
@@ -29,7 +30,9 @@
     "autoprefixer": "^10.4.5",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "mapbox-gl": "^2.8.2",
     "postcss": "^8.4.13",
+    "react-map-gl": "^7.0.11",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
   }
